--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://stefaneicher.github.io/homeschooling/",
+  "homepage": "https://homeschoolling-mit-herz.ch/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
